--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
     "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
     "mammoth": "https://cdn.jsdelivr.net/npm/mammoth@1.6.0/+esm",
     "framer-motion": "https://aistudiocdn.com/framer-motion@^11.0.8",
-    "react-hot-toast": "https://aistudiocdn.com/react-hot-toast@^2.4.1"
+    "react-hot-toast": "https://aistudiocdn.com/react-hot-toast@^2.4.1",
+    "body-parser": "https://aistudiocdn.com/body-parser@^2.2.1",
+    "express": "https://aistudiocdn.com/express@^5.2.1",
+    "cors": "https://aistudiocdn.com/cors@^2.8.5"
   }
 }
 </script>
